Fixed form to not overflow off screen on mobile devices.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -2226,8 +2226,10 @@ room-members-sidebar-width = 200px
 
   width 100%
 
+room-join-dialog-width = 350px
 .room-join-group-signup-form
-  width home-modal-inner-width
+  box-sizing border-box
+  width room-join-dialog-width
   margin 30px auto
   border 1px solid rgba(0,0,0, .28)
   border-radius 6px
@@ -2289,6 +2291,13 @@ room-members-sidebar-width = 200px
     color rgba(0,0,0, 0.5)
     font-size 10px
     text-align left
+
+// This is the width of iPhone 5 (4-inch display) rotated horizontally.
+@media (max-width: 568px)
+  .room-join-group-signup-form
+    max-width 100% // Make sure we don't overflow the width.
+    margin-top 10px // Reduce the top margin.
+    padding 15px // Reduce the padding.
 
 .messages
   // Scrollable.
